--- a/Templates/pages/index.html
+++ b/Templates/pages/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    {% extends 'base.html'%}
+    {%block content%}
+
     <h1>This is home page(index)</h1>
+    {%endblock%}
 </head>
 <body>
 
