--- a/Templates/partials/_topbar.html
+++ b/Templates/partials/_topbar.html
@@ -6,7 +6,7 @@
           <i class="fas fa-phone"></i> +9779861791627
         </div>
         <div class="col-md-4">
-          <i class="fas fa-envelope-open"></i> contact@btrealestate.co
+          <i class="fas fa-envelope-open"></i> anujshrestha15@gmail.com
         </div>
         <div class="col-md-4">
           <div class="social text-right">
