--- a/Templates/pages/index.html
+++ b/Templates/pages/index.html
@@ -125,7 +125,7 @@
     </div>
   </section>
 
-  <!-- Listings -->
+  <!-- listings -->
   <section id="listings" class="py-5">
     <div class="container">
       <h3 class="text-center mb-3">Latest Listings</h3>
