accounts app created and templates added

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -59,11 +59,11 @@
   </section>
 
   <!-- Work -->
-<section id="work" class="bg-dark text-white text-center">
+  <section id="work" class="bg-dark text-white text-center">
     <h2 class="display-4">We Work For You</h2>
     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem velit aperiam, unde aliquid at similique!</h4>
     <hr>
-    <a href="listings.html" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
+    <a href="{% url 'listings' %}" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
   </section>
 
   <!-- Team -->
@@ -74,7 +74,7 @@
          {% if realtors %}
               {% for realtor in realtors %}
                 <div class="col-md-4">
-                  <img src="{{ realtor.photo.url }} " height="100" width="100" alt="" class="rounded-circle mb-3">
+                  <img src="{{ realtor.photo.url }} " height="200" width="200" alt="" class="rounded-circle mb-3">
                   <h4>{{ realtor.name }}</h4>
                   <p class="text-success">
                     <i class="fas fa-award text-success mb-3"></i> Realtor</p>
