--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -3,10 +3,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <i class="fas fa-phone"></i> +9779861791627
+          <i class="fas fa-phone"></i> +1(732)7135311
         </div>
         <div class="col-md-4">
-          <i class="fas fa-envelope-open"></i> anujshrestha15@gmail.com
+          <i class="fas fa-envelope-open"></i> jerome@gmail.com
         </div>
         <div class="col-md-4">
           <div class="social text-right">
