--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
       <!-- Bootstrap -->
       <link rel="stylesheet" href= "{% static 'css/bootstrap.css' %}">
       <!-- Custom -->
-      <link rel="stylesheet" href= "{% static 'css/all.css' %}">
+      <link rel="stylesheet" href= "{% static 'css/style.css' %}">
       <!-- Light box -->
       <link rel="stylesheet" href = "{% static 'css/lightbox.min.css' %}">
 
@@ -19,13 +19,13 @@
 </head>
 <body>
     <!--TopBar-->
-    {% include 'partials/_topbar.html'%}
+    {% include 'partials/_topbar.html' %}
     <!-- Navbar -->
-    {% include 'partials/_navbar.html'%}
+    {% include 'partials/_navbar.html' %}
     <!--Main Content-->
     {% block content%} {% endblock %}
     <!-- Footer-->
-    {% include 'partials/_footer.html'%}
+    {% include 'partials/_footer.html' %}
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %} "></script>
     <script src="{% static 'js/lightbox.min.js' %} "></script>
